apps/mongo-express/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: &PODNAME mongo-express
spec: 
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
